client/src/App.css
:root {
  --header-height: 40px;
  --inputfield-container-height: 50px;
  --inputfield-container-vertical-margin: 20px;
  --inputfield-border-width: 2px;
  --dark-blue: rgb(13, 0, 52);
  --light-blue: rgb(124, 164, 238);
  --fpc-green: rgb(52, 175, 0);
  --info-section-header-height: 60px;
  --tut-img-height: 50px;
}

* {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

body,
html {
  background-color: rgba(1, 10, 54, 0.381);
  height: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
  position: relative;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#root {
  height: 100%;
  display: flex;
  flex-flow: column;
}

li {
  padding-left: 10px;
}

#arrow-icon {
  color: rgb(109, 170, 250);
  font-size: 2em;
  margin: auto;
}

/*HEADER*/

#header-container {
  background-color: rgb(1, 4, 17);
  color: white;
  flex: 0 0 var(--header-height);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

#header-main {
  padding-left: 15px;
  flex: 1;
  text-align: left;
  font-size: x-large;
}

#header-links-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-left: 10px;
  padding-right: 10px;
}

.header-link {
  text-align: center;
  max-width: 100px;
  margin: 2px;
  padding: 3px;
  text-decoration: none;
}

.navlink {
  transition: 200ms;
}

.navlink:hover {
  color: white;
  transition: 0s;
}

.navlink-inactive {
  color: rgb(186, 185, 185);
  text-decoration: none;
}

.navlink-active {
  color: white;
  text-decoration: underline;
}

/* HAMBURGER MENU */
#hamburger-icon {
  cursor: pointer;
  font-size: 1.5em;
  transition: all 200ms ease-out;
}

#hamburger-icon:hover {
  color: var(--fpc-green);
}

#hamburger-icon.active {
  rotate: 90deg;
}

#hamburger-icon.active:hover {
  color: red;
}

#hamburger-menu {
  position: absolute;
  top: var(--header-height);
  right: 0px;
  width: 100px;
  height: 100%;
  background-color: black;
  z-index: 99;
  transition: all 200ms ease-out;
}

#hamburger-menu.inactive {
  right: -100px;
}

/* INFO PAGES */
.info-page-container {
  height: 100%;
  margin: 20px;
  display: flex;
  flex-direction: column;
}

.info-page {
  flex: 1;
  background-color: var(--dark-blue);
  border-radius: 20px;
  padding-left: 20px;
  padding-right: 20px;
}

.info-section {
  background-color: var(--light-blue);
  margin-top: 20px;
  margin-bottom: 20px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 20px;
  max-width: 570px;
}

.info-section-header {
  display: flex;
  flex-direction: row;
  min-height: var(--info-section-header-height);
  cursor: pointer;
  background-color: cornflowerblue;
}

.info-section-header-spacer {
  flex: 1;
  max-width: var(--info-section-height);
}

.info-section-header-text {
  flex: 3;
  text-align: center;
  font-size: xx-large;
  margin: auto;
}

.info-section-header-button {
  flex: 1;
  max-width: var(--info-section-height);
  text-align: center;
  font-size: x-large;
  margin: auto;
  transition: ease-out 300ms;
}

.info-section-header-button.active {
  rotate: 180deg;
}

.info-section-body {
  height: fit-content;
  width: inherit;
  background-color: var(--light-blue);
  padding: 20px;
}

.info-section-body > h1,
.info-section-body > h2,
.info-section-body > h3,
.info-section-body > form {
  text-align: center;
}

/* CONTAGE PAGE */

#contact-links {
  text-align: center;
}

#contact-links > * {
  margin: 20px;
  font-size: 4em;
}

.linkedin,
.github,
.twitter {
  position: relative;
  z-index: 10;
  transition: all 8s ease-out;
  margin-top: 5px;
}

.linkedin:hover,
.github:hover,
.twitter:hover {
  transition: all 2s ease-out;
  rotate: 900deg;
}

.linkedin {
  color: rgb(21, 105, 191);
}

.github {
  color: rgb(0, 0, 0);
}

.twitter {
  color: rgb(41, 157, 237);
}

.icon-bg {
  position: absolute;
  top: 5px;
  left: 2px;
  height: 50px;
  width: 50px;
  background-color: white;
  z-index: -1;
}

/*INPUT FIELD*/

#inputfield-container {
  text-align: center;
  display: flex;
  flex-direction: row;
  height: var(--inputfield-container-height);
  margin-top: var(--inputfield-container-vertical-margin);
  margin-bottom: var(--inputfield-container-vertical-margin);
  padding: 3px;
  border-radius: 20px;
}

#inputfield-spacer {
  flex: 1;
}

#inputfield {
  flex: 4;
  max-width: none;
  text-align: center;
  font-size: xx-large;
  padding-left: 3px;
  border-style: solid;
  border-color: black;
  border-width: var(--inputfield-border-width);
  border-radius: 20px;
  text-transform: lowercase;
}

#inputfield-container:focus-within #inputfield {
  border-color: var(--fpc-green);
  outline-style: solid;
  outline-width: 2px;
  outline-color: var(--fpc-green);
}

#inputfield-container:focus-within .autocomplete-panel {
  visibility: visible;
}

#inputfield:focus::placeholder {
  color: transparent;
}

.random-button {
  flex: 1;
  font-size: xx-large;
  text-align: left;
  padding-left: 10px;
  margin: auto;
  cursor: pointer;
  transition: 350ms;
}

.random-button:hover {
  color: white;
  transition: 0s;
}

.autocomplete-panel {
  position: absolute;
  top: calc(
    1px + var(--header-height) + var(--inputfield-container-height) +
      var(--inputfield-container-vertical-margin) +
      var(--inputfield-border-width) * 2
  );
  left: calc(calc(100% - 260px) / 2);
  width: 260px;
  /* min-width: 234px; */ /* this causes centering issues. TODO: implement this w/o issues */

  max-height: 200px;
  z-index: 999;

  visibility: hidden;
  background-color: rgba(256, 256, 256, 0.9);

  border-style: solid;
  border-width: 1px;
  border-color: black;
  border-radius: 0 0 20px 20px;
}

.autocomplete-suggestion {
  border-bottom: 1px solid;
  border-color: lightgray;
  cursor: pointer;
}
/* ... */

